MDEV-3934 Assertion `((keypart_map+1) & keypart_map) == 0' failed in _mi_pack_key with an index on a POINT column

sel_arg_range_seq_next(): set keypart map also for GEOM_FLAG keys